z-index fix

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ header>div {
     filter: blur(8px);
     opacity: 0.5;
     /* Adjust opacity as needed */
-    /* z-index: -1; */
+    z-index: -1;
 }
 
 .home-section2 {
